--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
+## 0.x.x / 2018-x-xx
+
+* [FEATURE] Add Grafana dashboard.
+
 ## 0.1.0 / 2018-10-31
 
-* [FEATURE] Add prometheus metrics for the SLI processing flow  .
+* [FEATURE] Add prometheus metrics for the SLI processing flow.
 * [FEATURE] Add deploy example manifests for Kubernetes.
 * [FEATURE] Add Prometheus SLI inputs and SLI result outputs.
 * [FEATURE] Add operator.
